--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ main {
 table {
   border: 1px solid #64748b;
   border-collapse: collapse;
+  table-layout: fixed;
 }
 
 td {
@@ -52,6 +53,13 @@ th {
   color: white;
   padding: 24px 16px;
   text-align: left;
+  width: 20%;
+}
+
+td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 tr:nth-child(even) {
