--- a/style.css
+++ b/style.css
@@ -174,3 +174,15 @@ input[type="reset"] {
   color: gray;
   display: none;
 }
+
+.notification {
+  position: absolute;
+  z-index: 999;
+  top: 16px;
+  right: 16px;
+  background-color: #22c55e;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  opacity: 0.9;
+}
