--- a/style.css
+++ b/style.css
@@ -180,9 +180,16 @@ input[type="reset"] {
   z-index: 999;
   top: 16px;
   right: 16px;
-  background-color: #22c55e;
   color: white;
   padding: 10px;
   border-radius: 5px;
   opacity: 0.9;
+}
+
+.notification.success {
+  background-color: #22c55e;
+}
+
+.notification.error {
+  background-color: #ef4444;
 }
